Doc: minor change to curve select more/less

Address T55218